fix: fix auto update entry point for v2

--- a/pyproject.toml.jinja
+++ b/pyproject.toml.jinja
@@ -46,7 +46,7 @@ plugin_ipython_client_pre = "{{ project_name }}.bec_ipython_client.startup.pre_s
 plugin_ipython_client_post = "{{ project_name }}.bec_ipython_client.startup"
 
 [project.entry-points."bec.widgets.auto_updates"]
-plugin_widgets_update = "{{ project_name }}.bec_widgets.auto_updates:PlotUpdate"
+plugin_widgets_update = "{{ project_name }}.bec_widgets.auto_updates"
 
 [project.entry-points."bec.widgets.user_widgets"]
 plugin_widgets = "{{ project_name }}.bec_widgets.widgets"
