fix: add branch input to CI template for child pipeline

--- a/.gitlab-ci.yml.jinja
+++ b/.gitlab-ci.yml.jinja
@@ -3,4 +3,5 @@ include:
   inputs:
     name: {{ project_name }}
     target: {{ project_name }}
+    branch: $CHILD_PIPELINE_BRANCH
   project: bec/awi_utils
