--- a/{{project_name}}/bec_widgets/widgets/{% yield widget_plugin from widget_plugins %}{{ widget_plugin.module }}{% endyield %}/{% if widget_plugin.use_ui %}{{ widget_plugin.module }}.ui{% endif %}.jinja
+++ b/{{project_name}}/bec_widgets/widgets/{% yield widget_plugin from widget_plugins %}{{ widget_plugin.module }}{% endyield %}/{% if widget_plugin.use_ui %}{{ widget_plugin.module }}.ui{% endif %}.jinja
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <ui version="4.0">
     <class>{{ widget_plugin.class | stash_filename }}</class>
-    <widget class="QWidget" name="MainWindow">
+    <widget class="QWidget" name="{{ widget_plugin.class }}">
     </widget>
     <resources />
     <connections />
